--- a/foundry.toml
+++ b/foundry.toml
@@ -15,8 +15,9 @@ remappings = [
     '@RollAMate/core/=src/production/core/',
     '@RollAMate/libraries/=src/libraries/',
     'mock-contracts/=src/mock/',
+    'Tesnet-contracts/=src/testnet/',
 ]
-optimizer-runs = 200
+optimizer-runs = 400
 via_ir = true
 
 [fuzz]
